--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="bar2"></div>
     <div class="bar rainbow-bg"></div>
-    <p class="w3-center w3-animate-left">CrawLeyYou's Website</p>
+    <p class="w3-center w3-animate-left">CrawLeyYou</p>
     <h3 class="w3-center w3-animate-opacity h3">UNDER CONSTRUCTION</h3>
     <div class="bar3"></div>
     <div class="animateddiv"></div>
