--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
     //alert("This site was made in 1920x1080 compatible. If you're trying to view it in another resolution, something might look broken.");
 </script>
 
-<body>
-    <div class="bar2"></div>
+<body>     
+    <ul class="navul">
+        <li><a href="#contacts" class="li nava"> Contacts </a></li>
+        <li><a href="./pages/projects.html" class="li nava"> Projects </a></li>
+        <li><a href="#aboutme" class="li nava"> About me </a></li>
+        <li><a href="https://crawleyyou.github.io" class="li nava"> Home </a></li>
+    </ul>
+<section>
     <div class="bar rainbow-bg"></div>
-    <p class="w3-center w3-animate-left">CrawLeyYou</p>
-    <h3 class="w3-center w3-animate-opacity h3">UNDER CONSTRUCTION</h3>
-    <div class="bar3"></div>
-    <div class="animateddiv"></div>
+    <p class="w3-animate-left">CrawLeyYou</p>
+    <p class="w3-animate-right">STILL UNDER CONSTRUCTION</p>
+</section>
+<section class="blank2">
+  <p class="w3-animate-opacity">Student & Junior Developer</p>
+    </section>
+
+<section class="blank2" id="aboutme">
+    <h1 class="w3-animate-opacity">Hi, I'm 14 y.o, a junior developer from turkey. I'm started programming in 2021. I learning programming by making things and search on the internet.</h1> 
+</section>
+
 </body>
