--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="allinone.css" media="screen">
+    <link rel="stylesheet" href="./static/allinone.css" type="text/css" media="screen">
     <title>CrawLeyYou's Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
-
 </html>
-<script>
-    //alert("This site was made in 1920x1080 compatible. If you're trying to view it in another resolution, something might look broken.");
-</script>
-
-<body>     
+<body>
     <ul class="navul">
-        <li><a href="#contacts" class="li nava"> Contacts </a></li>
+        <li><a href="./pages/contacts.html" class="li nava"> Contacts </a></li>
         <li><a href="./pages/projects.html" class="li nava"> Projects </a></li>
         <li><a href="#aboutme" class="li nava"> About me </a></li>
-        <li><a href="https://crawleyyou.github.io" class="li nava"> Home </a></li>
+        <li><a href="#" class="li nava"> Home </a></li>
     </ul>
-<section>
-    <div class="bar rainbow-bg"></div>
-    <p class="w3-animate-left">CrawLeyYou</p>
-    <p class="w3-animate-right">STILL UNDER CONSTRUCTION</p>
-</section>
-<section class="blank2">
-  <p class="w3-animate-opacity">Student & Junior Developer</p>
+    <section>
+        <div class="bar rainbow-bg"></div>
+        <p class="w3-animate-left">CrawLeyYou</p>
     </section>
-
-<section class="blank2" id="aboutme">
-    <h1 class="w3-animate-opacity">Hi, I'm 14 y.o, a junior developer from turkey. I'm started programming in 2021. I learning programming by making things and search on the internet.</h1> 
-</section>
-
+    <section class="blank2">
+        <p class="w3-animate-opacity">Student & Junior Developer</p>
+    </section>
+    <section class="blank2" id="aboutme">
+        <h1 class="w3-animate-opacity">Hi, I'm 14 y.o, a junior developer from turkey. I'm started programming in 2021.
+            I learning programming by making things and search on the internet.</h1>
+    </section>
 </body>
