--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,6 +31,12 @@
                 onclick="redirect('https://dev.to/crawleyyou')"></img>
             <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/731248412988670103/899842465622802442/Discord-Logo-White.svg"
                 onclick="redirect('https://discord.com/users/407987023647997964')"></img>
+                <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/785376778188881951/991802316950864023/instagram-new-2016-glyph-logo-84CB825424-seeklogo.com.png"
+                onclick="redirect('https://www.instagram.com/crawleyyou')"></img>
+                <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/785376778188881951/991802635227246642/twitter-logo-1DEF94C339-seeklogo.com.png"
+                onclick="redirect('https://twitter.com/CrawLeyYou')"></img>
+                <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/785376778188881951/991803112778125312/15-150195_gmail-comments-google-mail-logo-black-and-white.png"
+                onclick="alert('contact@crawleyyou.tk')"></img>
         </div>
     </section>
 </body>
