--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,7 +22,7 @@
 </section>
 <section class="blank">
     <div class="projectcontainer w3-center" onclick="redirect('https://github.com/AntiAternosBot')">
-        <img src="https://github.com/CrawLeyYou/us/blob/main/aternos.png?raw=true" class="w3-animate-opacity" id="AAB" width="128" height="128"> </img>
+        <img src="https://avatars.githubusercontent.com/u/83824359?s=200&v=4" class="w3-animate-opacity" id="AAB" width="128" height="128"> </img>
         <div class="projectinfo w3-animate-opacity">AntiAternosBot</div>
     </div>
 </section>
