--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -36,7 +36,7 @@
                 <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/785376778188881951/991802635227246642/twitter-logo-1DEF94C339-seeklogo.com.png"
                 onclick="redirect('https://twitter.com/CrawLeyYou')"></img>
                 <img class="logo w3-animate-opacity" src="https://cdn.discordapp.com/attachments/785376778188881951/991803112778125312/15-150195_gmail-comments-google-mail-logo-black-and-white.png"
-                onclick="alert('contact@crawleyyou.tk')"></img>
+                onclick="alert('crawleyyou@crawleyyou.tech')"></img>
         </div>
     </section>
 </body>
